--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
 # Minimum Django and REST framework version
-Django>=1.6,<2.0; python_version<'3.0'
-Django>=2.0; python_version>='3.0'
-djangorestframework>=2.4.3
+Django>=3.2
+djangorestframework>=3.13
 
 # Test requirements
 pytest-django==4.5.2
-pytest==7.3.2
+pytest==7.4.2
 pytest-cov==4.1.0
-flake8==6.0.0
+flake8==6.1.0
 
 # wheel for PyPI installs
-wheel==0.40.0
+wheel==0.41.2
 
 # MkDocs for documentation previews/deploys
-mkdocs==1.4.3
+mkdocs==1.5.2
 
 # mypy
-mypy==1.3.0
-django-stubs==4.2.1
-djangorestframework-stubs==3.14.1
-types-pyyaml==6.0.12.10
+mypy==1.5.1
+django-stubs==4.2.4
+djangorestframework-stubs==3.14.2
+types-pyyaml==6.0.12.11
