feat: add support for python/django versions

--- a/tox.ini
+++ b/tox.ini
@@ -1,42 +1,40 @@
 [tox]
 envlist =
-       py{34,35}-django2-drf{3.8,3.9,3.10,3.11}
-       py{36,37,38,39}-django2-drf{3.8,3.9}
-       py{36,37,38,39}-django{2,3}-drf{3.10,3.11}
+       py{38,39}-django{32,41}-drf{3.13,3.14}
+       py{38,39,310}-django{32,41,42}-drf{3.14}
+       py{311}-django{41,42}-drf{3.14}
 
 [testenv]
+allowlist_externals = ./runtests.py
 commands = ./runtests.py --fast
 setenv =
        PYTHONDONTWRITEBYTECODE=1
 deps =
-       django2: Django>=2.2,<3.0
+       django32: Django>=3.2,<4.0
+       django41: Django>=4.1,<4.2
+       django42: Django>=4.2,<5.0
 
-       # To deal with https://github.com/encode/django-rest-framework/pull/6953 ("FieldDoesNotExist")
-       django3-drf3.10: Django>=3.0,<3.1
-       django3-drf3.11: Django>=3.0,<4.0
+       drf3.13: djangorestframework>=3.13,<3.14
+       drf3.14: djangorestframework>=3.14,<3.15
 
-       drf3.8: djangorestframework>=3.8,<3.9
-       drf3.9: djangorestframework>=3.9,<3.10
-       drf3.10: djangorestframework>=3.10,<3.11
-       drf3.11: djangorestframework>=3.11,<3.12
+       pytest-django==4.5.2
+       pytz==2023.3
 
-       pytest-django==4.4.0
-
-[testenv:py37-flake8]
+[testenv:py311-flake8]
 commands = ./runtests.py --lintonly
 deps =
-       pytest==5.4.3
-       flake8==3.3.0
+       pytest==7.4.2
+       flake8==6.1.0
 
-[testenv:py37-docs]
+[testenv:py311-docs]
 commands = mkdocs build
 deps =
        mkdocs>=0.11.1
 
-[testenv:py37-mypy]
+[testenv:py311-mypy]
 commands = mypy dry_rest_permissions
 deps =
-       mypy==0.910
-       django-stubs==1.8.0
-       djangorestframework-stubs==1.4.0
-       types-pyyaml==5.4.3
+       mypy==1.5.1
+       django-stubs==4.2.4
+       djangorestframework-stubs==3.14.2
+       types-pyyaml==6.0.12.11
