--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
 # Minimum Django and REST framework version
-Django>=1.6,<2.0; python_version<'3.0'
-Django>=2.0; python_version>='3.0'
-djangorestframework>=2.4.3
+Django>=3.2
+djangorestframework>=3.13
 
 # Test requirements
-pytest-django==3.9.0
-pytest==5.4.3
-pytest-cov==2.9.0
-flake8==2.2.2
+pytest-django==4.5.2
+pytest==7.4.2
+pytest-cov==4.1.0
+flake8==6.1.0
 
 # wheel for PyPI installs
-wheel==0.24.0
+wheel==0.41.2
 
 # MkDocs for documentation previews/deploys
-mkdocs==1.2.1
+mkdocs==1.5.2
 
 # mypy
-mypy==0.910
-django-stubs==1.8.0
-djangorestframework-stubs==1.4.0
-types-pyyaml==5.4.3
+mypy==1.5.1
+django-stubs==4.2.4
+djangorestframework-stubs==3.14.2
+types-pyyaml==6.0.12.11
